# phd_visualizations

./: .gitignore  LICENSE  README.md  changelog.md  pyproject.toml  requirements.txt  setup.py
assets/: icon.xcf
examples/: README.md
examples/assets/: MED_FSM_test_state_evolution.html  SolarMED_state_evolution_20230703.html  super_markers_in_regression_plot_demo.html  thermal_storage_validation_20231030_generated_202403071421.html
examples/data/: data.csv  data_mod.csv  plt_config_solar_field.json  plt_config_thermal_storage.json
examples/solhycool/: plot_config.hjson
notebooks/: latex_table.ipynb
phd_visualizations/: __init__.py  calculations.py  constants.py  diagrams.py  test_timeseries.py
phd_visualizations/utils/: __init__.py  units.py
src/phd_visualizations/: __init__.py  calculations.py  constants.py  heat_exchanger.py  optimization.py  regression.py  super_makers.py  test_timeseries.py
src/phd_visualizations/diagrams/: __init__.py  utils.py
src/phd_visualizations/interactive/: points_selection.py
src/phd_visualizations/test_timeseries/: __init__.py  utils.py
src/phd_visualizations/textual/: __init__.py
src/phd_visualizations/utils/: __init__.py
