[project]
name = "phd-visualizations"
version = "0.1.0"
description = "Several visualizations implemented during my PhD studies, mainly using plotly (with plotly resampler) and matplotlib"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "iapws>=1.5.4",
    "ipywidgets>=8.1.5",
    "loguru>=0.7.2",
    "lxml>=5.3.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "plotly>=5.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
